--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "author": "Max Rosoff",
     "license": "MIT",
     "dependencies": {
-        "@emotion/react": "^11.11.0",
-        "@emotion/styled": "^11.11.0",
-        "@mui/icons-material": "^5.11.16",
-        "@mui/lab": "^5.0.0-alpha.132",
-        "@mui/material": "^5.13.3",
-        "axios": "^1.4.0",
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/icons-material": "^6.4.8",
+        "@mui/lab": "^6.0.0-beta.31",
+        "@mui/material": "^6.4.8",
+        "axios": "^1.8.3",
         "clsx": "latest",
-        "framer-motion": "^10.12.16",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.11.2"
+        "framer-motion": "^12.5.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-router-dom": "^7.3.0"
     },
     "devDependencies": {
-        "@types/react": "^18.2.7",
-        "@types/react-dom": "^18.2.4",
-        "@vitejs/plugin-react": "^4.0.0",
-        "sass": "^1.62.1",
-        "typescript": "^5.0.4",
-        "vite": "^4.3.9",
-        "vite-plugin-electron": "^0.11.2"
+        "@types/react": "^19.0.11",
+        "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-react": "^4.3.4",
+        "sass": "^1.86.0",
+        "typescript": "^5.8.2",
+        "vite": "^6.2.2",
+        "vite-plugin-electron": "^0.29.0"
     }
 }
