--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-static-site",
+    "name": "project-mohager",
     "version": "1.0.0",
     "description": "A Modern Web App Template",
     "scripts": {
@@ -27,7 +27,6 @@
         "@vitejs/plugin-react": "^4.3.4",
         "sass": "^1.86.0",
         "typescript": "^5.8.2",
-        "vite": "^6.2.2",
-        "vite-plugin-electron": "^0.29.0"
+        "vite": "^6.2.2"
     }
 }
