Most Recent changes: Test Display with weather API

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "axios": "^1.8.3",
         "clsx": "latest",
         "framer-motion": "^12.5.0",
+        "motion": "^12.5.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-router-dom": "^7.3.0"
