--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
         "@mui/icons-material": "^6.4.8",
         "@mui/lab": "^6.0.0-beta.31",
         "@mui/material": "^6.4.8",
+        "@react-three/drei": "^10.0.4",
         "axios": "^1.8.3",
         "clsx": "latest",
         "framer-motion": "^12.5.0",
         "motion": "^12.5.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "react-router-dom": "^7.3.0"
+        "react-router-dom": "^7.3.0",
+        "react-three-fiber": "^6.0.13",
+        "three": "^0.174.0",
+        "tone": "^15.0.4"
     },
     "devDependencies": {
         "@types/react": "^19.0.11",
