--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,14 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
+  "ts-node": {
+        "transpileOnly": true,
+        "compilerOptions": {
+            "module": "NodeNext",
+            "moduleResolution": "NodeNext",
+            "sourceMap": true
+        }
+    },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
