change build command in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
           WEBSITE_NODE_ENV: "production"
 
       - name: Build
-        run: npm run build
+        run: npm run build-lambda
       
       - name: Bootstrap
         run: npm run bootstrap
